k8s/apps/default/meshcentral/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshcentral
spec:
  selector:
    matchLabels:
      app: meshcentral
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: meshcentral
    spec:
      hostname: meshcentral
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: meshcentral-config
        - name: config
          configMap:
            name: meshcentral
      containers:
        - name: meshcentral
          image: ghcr.io/ylianst/meshcentral:latest@sha256:0247baf14d77b5f1a71408e5c39d99b28f757c48f71d119c40d6a8ee45d4c84d
          imagePullPolicy: "IfNotPresent"
          command:
            - node
            - meshcentral/meshcentral
            - --configfile
            - /opt/config.json
          resources:
            requests:
              cpu: "512m"
              memory: "2024Mi"
            limits:
              memory: 2024Mi
          ports:
            - containerPort: 443
              name: web
            - containerPort: 4433
              name: amt
          volumeMounts:
            - name: config
              mountPath: /opt/config.json
              subPath: config.json
            - name: storage
              mountPath: /opt/meshcentral/meshcentral-data
              subPath: meshcentral-data
            - name: storage
              mountPath: /opt/meshcentral/meshcentral-files
              subPath: meshcentral-files
            - name: storage
              mountPath: /opt/meshcentral/meshcentral-backups
              subPath: meshcentral-backups
            - name: storage
              mountPath: /opt/meshcentral/meshcentral-web
              subPath: meshcentral-web
