k8s/apps/default/meshcentral/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meshcentral
spec:
  selector:
    app: meshcentral
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: web
      protocol: TCP
    - name: amt
      port: 4433
      targetPort: amt
      protocol: TCP
