k8s/apps/default/meshcentral/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshcentral
  annotations:
    nginx.ingress.kubernetes.io/proxy-ssl-verify: off
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: internal
  rules:
    - host: &host meshcentral.holywoo.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meshcentral
                port:
                  name: http
  tls:
    - hosts:
        - *host
